2015-08-23  Kubo Takehiro  <kubo@jiubao.org>
	* dist-files: Add ext/oci8/util.c.

2015-07-12  Kubo Takehiro  <kubo@jiubao.org>
	* docs/install-instant-client.md: Add instant client installation
	    instructions on OS X using homebrew.

2015-07-12  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.rb: Check DYLD_FALLBACK_LIBRARY_PATH also on
	    installation. (OS X only)

2015-07-11  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/extconf.rb, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/util.c, ext/oci8/win32.c,
	  lib/oci8/encoding-init.rb: Delete OCI8::Win32Util.dll_path
	    and add OCI8::Util.dll_path, which works on Linux, Solaris,
	    OS X and HP-UX in addition to Windows.

2015-06-26  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb, lib/oci8/check_load_error.rb: Check the message of
	    LoadError and raise more user-friendly message.

2015-06-23  Kubo Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: Load oci8/version.rb temporarily and delete OCI8.
	    Some 'bundler' tasks load 'ruby-oci8.gemspec' before 'require "oci8"'
	    and fail with 'TypeError: superclass mismatch for class OCI8.'
	    (github issue #80)

2015-06-21  Kubo Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: Use ruby-oci8 version in lib/oci8/version.rb
	    instead of VERSION file to generate gem.
	    (github issue #79)

2015-06-21  Kubo Takehiro  <kubo@jiubao.org>
	* Makefile, dist-files, ext/oci8/extconf.rb, ext/oci8/oci8.c: Use
	   ruby-oci8 version in lib/oci8/version.rb instead of VERSION file.
	* VERSION: Deleted
	* lib/oci8/version.rb: Added
	* lib/oci8.rb, lib/oci8.rb.in: Renamed lib/oci8.rb to lib/oci8.rb.in.

2015-06-21  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/encoding-init.rb: Get Oracle client charset name from
	    the environment handle instead of NLS_LANG.

2015-06-20  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h: Fix a compilation error.

2015-06-20  Kubo Takehiro  <kubo@jiubao.org>